--- a/My Work/index.html
+++ b/My Work/index.html
@@ -6,6 +6,14 @@
     <title>My Website</title>
 </head>
 <body>
-    
+    <h1>My Portfolio</h1>
+    <h2>I'm a Full Stack Web Developer</h2>
+    <hr/>
+    <a href="./public/movie-ranking.html"><h3>Movie Ranking</h3></a>
+    <img src="./assets/images/movie.png" style="height: 300px; width: 300px;" alt="">
+    <a href="./public/birthday-invite.html"><h3>Birthday Invitation</h3></a>
+    <img src="./assets/images/birthday.png" style="height: 300px; width: 300px;;" alt="">
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
